--- a/wiki/Install_IntraSell.wiki
+++ b/wiki/Install_IntraSell.wiki
@@ -1,2 +1,6 @@
-1. Use the 32 Bit ODBC Manager to register the MySQL Database 
+
+This Steps are valid for Windows 64 bit and MS Access 2010 
+
+1. Install the 32 Bit ODBC Driver from MYSQL 
+2. Use the 32 Bit ODBC Manager to register the MySQL Database 
 c:\windows\SysWOW64\odbcad32.exe
