--- a/wiki/Install_IntraSell.wiki
+++ b/wiki/Install_IntraSell.wiki
@@ -1,6 +1,30 @@
-
 This Steps are valid for Windows 64 bit and MS Access 2010 
 
 1. Install the 32 Bit ODBC Driver from MYSQL 
 2. Use the 32 Bit ODBC Manager to register the MySQL Database 
 c:\windows\SysWOW64\odbcad32.exe
+
+Example content of IntraSell_ODBCRegister_64bit
+{{{
+
+Windows Registry Editor Version 5.00
+
+[HKEY_LOCAL_MACHINE\SOFTWARE\ODBC\ODBC.INI\intrasell_daten_2]
+"Driver"="C:\\Program Files (x86)\\MySQL\\Connector ODBC 5.1\\myodbc5.dll"
+"SERVER"="10.0.0.106"
+"UID"="webshop"
+"PWD"="xxxxxx"
+"DATABASE"="intrasell_daten_2"
+"PORT"="3306"
+
+
+
+[HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\ODBC\ODBC.INI\intrasell_daten_3]
+"Driver"="C:\\Program Files (x86)\\MySQL\\Connector ODBC 5.1\\myodbc5.dll"
+"SERVER"="10.0.0.106"
+"UID"="webshop"
+"PWD"="xxxxxx"
+"DATABASE"="intrasell_daten_2"
+"PORT"="3306"
+
+}}}
