--- a/wiki/Install_IntraSell.wiki
+++ b/wiki/Install_IntraSell.wiki
@@ -12,6 +12,11 @@ Check if Access 2010 (32 Bit) and  MS Word 2010 are already installed.
 2. Install the 32 Bit ODBC Driver from MYSQL Downloads: 
 http://dev.mysql.com/get/Downloads/Connector-ODBC/5.1/mysql-connector-odbc-5.1.13-win32.msi
 
+For steps 3 and 4you can use the batch file:
+{{{
+Z:\intrasell4\IntraSell\setup64Bit.bat
+}}}
+
 3. Use the 32 Bit ODBC Manager to register the MySQL Database.
 Open command windows and run:
 {{{
